# Orak

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: configuration.md  eval_metrics.md  setup_ace_attorney.md  setup_baba_is_you.md  setup_darkest_dungeon.md  setup_her_story.md  setup_minecraft.md  setup_pokemon.md  setup_slay_the_spire.md  setup_star_craft.md  setup_stardew_valley.md  setup_street_fighter.md  setup_supermario.md  setup_twenty_fourty_eight.md  submission_LLM.md  submission_guideline.md
executables/streetfighter3/roms/: readme.txt
requirements/: base.txt  minecraft.txt  pokemon_red.txt  starcraft2.txt  streetfighter3.txt  supermario.txt
scripts/: json_viewer.py  mcp_play_game.py  play_game.py  play_game_multi.py
scripts/arena/python/: star_craft.ps1  street_fighter.sh
scripts/leaderboard/mcp/: ace_attorney.ps1  baba_is_you.sh  darkest_dungeon.ps1  her_story.sh  minecraft.sh  slay_the_spire.ps1  slay_the_spire.sh  stardew_valley.ps1  street_fighter.sh  super_mario.sh  twenty_fourty_eight.sh
scripts/leaderboard/python/: ace_attorney.ps1  baba_is_you.sh  darkest_dungeon.ps1  her_story.sh  minecraft.sh  pokemon_red.sh  slay_the_spire.bat  slay_the_spire.ps1  slay_the_spire.sh  star_craft.ps1  stardew_valley.ps1  street_fighter.sh  super_mario.sh  twenty_fourty_eight.sh
src/mcp_agent_client/: base_agent.py  base_client.py  config_loader.py  json_schemas.py
src/mcp_agent_client/llms/: anthropic_utils.py  deepseek_utils.py  google_utils.py  llm.py  openai_utils.py  utils.py
src/mcp_agent_client/runner/: eval.py  multiagent_eval.py
src/mcp_agent_servers/: agent_types.py  base_server.py  memory.py  setup_openai.py  skill_manager.py
src/mcp_agent_servers/baba_is_you/: config.yaml
src/mcp_agent_servers/darkest_dungeon/: config.yaml
src/mcp_agent_servers/her_story/: config.yaml
src/mcp_agent_servers/minecraft/: config.yaml
src/mcp_agent_servers/pokemon_red/: config.yaml
src/mcp_agent_servers/pwaat/: config.yaml  server.py
src/mcp_agent_servers/slay_the_spire/: config.yaml  (+1 more)
src/mcp_game_servers/: base_server.py
(+283 files in other folders)
